@@ -1,4 +1,4 @@
-/* $Id: news.c,v 1.4 2002/12/27 16:31:49 ukai Exp $ */
+/* $Id: news.c,v 1.5 2002/12/27 16:46:13 ukai Exp $ */
 #include "fm.h"
 #include "myctype.h"
 #include <stdio.h>
@@ -274,9 +274,7 @@ readNewsgroup(ParsedURL *pu)
     char *volatile qgroup;
     int status, i, first, last;
     volatile int flag = 0, start = 0, end = 0;
-#ifdef JP_CHARSET
     char code = '\0';
-#endif
     MySignalHandler(*volatile trap) (SIGNAL_ARG) = NULL;
 
     if (current_news.host == NULL || !pu->file || *pu->file == '\0')
