@@ -1,5 +1,9 @@
 2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* fix build errors
+	* display.c (make_lastline_message): fix error for undef JP_CHARSET
+	* news.c (readNewsgroup: `code' always required
+
 	* gcc -Wall -Werror clean
 	* file.c (loadHTMLstream): unused variable `p'
 	* news.c (news_command): unused variable `c'
@@ -6153,4 +6157,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.654 2002/12/27 16:30:53 ukai Exp $
+$Id: ChangeLog,v 1.655 2002/12/27 16:46:13 ukai Exp $
